added categories section

--- a/index.html
+++ b/index.html
@@ -113,6 +113,106 @@
     </div>
     <br>
     <br>
+    <p style="font-weight: bolder; margin: 20px 0px 0px 30px" id="tc">
+        <span style="font-size: 60px;">Trending</span> <span style="font-size:60px ; color: rgb(233, 16, 16); margin-left: 10px;">Categories</span>
+      </p>
+      <section class="categoryBox">
+        <a href=""
+          ><img
+            src="./img/images/category-box-new-D-240x350-oversized-m-1687962517.webp"
+            alt=""
+        /></a>
+  
+        <a href=""
+          ><img
+            src="./img/images/category-box-new-D-240x350-full-sleeve-tshirts-m-1687962516.webp"
+            alt=""
+        /></a>
+  
+        <a href=""
+          ><img
+            src="./img/images/category-box-new-D-240x350-printed-tees-m-1687962518.webp"
+            alt=""
+        /></a>
+  
+        <a href=""
+          ><img
+            src="./img/images/category-box-new-D-240x350-joggers-m-1687962521.webp"
+            alt=""
+        /></a>
+  
+        <a href=""
+          ><img
+            src="./img/images/category-box-new-D-240x350-shorts-m-1687962518.webp"
+            alt=""
+        /></a>
+  
+        <a href=""
+          ><img
+            src="./img/images/category-box-new-D-240x350-vests-m-1687962519.webp"
+            alt=""
+        /></a>
+  
+        <a href=""
+          ><img
+            src="./img/images/category-box-new-D-240x350-boyfriend-tees-w-1687962519.webp"
+            alt=""
+        /></a>
+  
+        <a href=""
+          ><img
+            src="./img/images/category-box-new-D-240x350-joggers-w-1687962521.webp"
+            alt=""
+        /></a>
+  
+        <a href=""
+          ><img
+            src="./img/images/category-box-new-D-240x350-oversized-tees-w-1687962518.webp"
+            alt=""
+        /></a>
+  
+        <a href=""
+          ><img
+            src="./img/images/category-box-new-D-240x350-pyjamas-w-1687962516.webp"
+            alt=""
+        /></a>
+  
+        <a href=""
+          ><img
+            src="./img/images/category-box-new-D-240x350-fashion-tops-w-1687962520.webp"
+            alt=""
+        /></a>
+  
+        <a href=""
+          ><img
+            src="./img/images/category-box-new-D-240x350-dresses-w-1687962520.webp"
+            alt=""
+        /></a>
+      </section>
+
+      <p style="font-weight: bolder; margin: 20px 0px 0px 30px" id="thtbm">
+        <span style="font-size: 60px;">Too Hot to be</span> <span style="font-size:60px ; color: rgb(233, 16, 16); margin-left: 10px;">Missed</span>
+      </p>
+      <section class="thtbm">
+        <a href=""
+          ><img src="./img/images/mid-size-hygiene-revamp-buy3-1689160570.jpg" alt=""
+        /></a>
+        <a href=""
+          ><img
+            src="./img/images/mid-size-hygiene-revamp-PlainOversized-Common-1689578062.jpg"
+            alt=""
+        /></a>
+        <a href=""
+          ><img
+            src="./img/images/mid-size-hygiene-revamp-printed-bf-tees-01-1689572486.webp"
+            alt=""
+        /></a>
+        <a href=""
+          ><img
+            src="./img/images/mid-size-hygiene-revamp-joggersunleashed-1689572489.webp"
+            alt=""
+        /></a>
+      </section>
     <center>
         <span style="font-size: 60px;"><b>Our</b></span>
         <span style="font-size:60px ; color: rgb(233, 16, 16); margin-left: 10px;"><b>Products</b></span>
