added a login page and hyperlinks to other pages

--- a/contactform.html
+++ b/contactform.html
@@ -75,11 +75,11 @@
         <div class="menu1">
             <h2 style="font-size: 25px;">MENU</h2>
         <br><br>
-        <p>HOME</p><br>
-        <p>ABOUT</p><br>
-        <p>SERVICES</p><br>
+        <p><a href="index.html">HOME</a></p><br>
+        <p><a href="about.html">ABOUT</a></p><br>
+        <p><a href="product.html"> SERVICES</a></p><br>
         <p>BLOG</p><br>
-        <p>CONTACT</p>
+        <p><a href="contactform.html">CONTACT</a></p>
         </div>
     
     </div>
@@ -89,7 +89,7 @@
         <br><br>
         <p>ACCOUNT</p><br>
         <p>CHECKOUT</p><br>
-        <p>LOGIN</p><br>
+        <p><a href="login.html">LOGIN</a></p><br>
         <p>REGISTER</p><br>
         <p>SHOPPING</p>
         </div>
