fix social icon positions

--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
         <span style="font-size: 25px;font-weight: bold;"><i class="fa-solid fa-envelope"></i>   Gmail:</span><span style="font-size: 20px;font-weight: 100;">  jhaabhinesh977@gmail.com</span>
         <br><br><br>
         <div class="smedias">
-            <a href="" class="blaa"><i class="fa-brands fa-facebook"></i></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="" class="blaa"><i class="fa-brands fa-square-instagram"></i></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="" class="blaa"><i class="fa-brands fa-twitter"></i></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="" class="blaa"><i class="fa-brands fa-youtube"></i></a>
+            <a href="" class="blaa"><i class="fa-brands fa-facebook"></i></a><a href="" class="blaa"><i class="fa-brands fa-square-instagram"></i></a><a href="" class="blaa"><i class="fa-brands fa-twitter"></i></a><a href="" class="blaa"><i class="fa-brands fa-youtube"></i></a>
         </div>
         <!-- <span class="dot1"><a href=""></a></span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="dot1"><a href="">2</a></span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="dot1"><a href="">3</a></span>&nbsp;&nbsp;&nbsp;&nbsp;<b>...</b>&nbsp;&nbsp;&nbsp;&nbsp;<span class="dot1" style="padding: 5px;"><a href="">21</a></span> -->
     </div>
