--- a/about.html
+++ b/about.html
@@ -65,27 +65,29 @@
         </div>
         <!-- <span class="dot1"><a href=""></a></span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="dot1"><a href="">2</a></span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="dot1"><a href="">3</a></span>&nbsp;&nbsp;&nbsp;&nbsp;<b>...</b>&nbsp;&nbsp;&nbsp;&nbsp;<span class="dot1" style="padding: 5px;"><a href="">21</a></span> -->
     </div>
-    <div class="menu">
-        <div class="menu1">
-            <h2 style="font-size: 25px;">MENU</h2>
-        <br><br>
-        <p><a href="index.html">HOME</a></p><br>
-        <p><a href="about.html">ABOUT</a></p><br>
-        <p><a href="product.html">SERVICES</a></p><br>
-        <p>BLOG</p><br>
-        <p><a href="contactform.html">CONTACT</a></p>
+    <div class="footer-secondary">
+        <div class="menu">
+            <div class="menu1">
+                <h2 style="font-size: 25px;">MENU</h2>
+            <br><br>
+            <p><a href="index.html">HOME</a></p><br>
+            <p><a href="about.html">ABOUT</a></p><br>
+            <p><a href="product.html">SERVICES</a></p><br>
+            <p>BLOG</p><br>
+            <p><a href="contactform.html">CONTACT</a></p>
+            </div>
+        
         </div>
-    
-    </div>
-    <div class="account">
-        <div class="acc1">
-            <h2 style="font-size: 25px;">ACCOUNT</h2>
-        <br><br>
-        <p>ACCOUNT</p><br>
-        <p>CHECKOUT</p><br>
-        <p><a href="login.html">LOGIN</a></p><br>
-        <p>REGISTER</p><br>
-        <p>SHOPPING</p>
+        <div class="account">
+            <div class="acc1">
+                <h2 style="font-size: 25px;">ACCOUNT</h2>
+            <br><br>
+            <p>ACCOUNT</p><br>
+            <p>CHECKOUT</p><br>
+            <p><a href="login.html">LOGIN</a></p><br>
+            <p>REGISTER</p><br>
+            <p>SHOPPING</p>
+            </div>
         </div>
     </div>
     </div>
