Added the favicon for the site

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>REDSTORE- Fashion clothes for Boys and Girls  </title>
 </head>
 <link  rel="stylesheet" href="Css/style.css" >
+<link rel="icon" type="image/png" href="favicon.png">
 <script src="https://kit.fontawesome.com/61673b2d06.js" crossorigin="anonymous"></script>
 <body>
     <div class="nav">
