--- a/product.html
+++ b/product.html
@@ -229,7 +229,7 @@
         <span style="font-size: 25px;font-weight: bold;"><i class="fa-solid fa-envelope"></i>   Gmail:</span><span style="font-size: 20px;font-weight: 100;">  jhaabhinesh977@gmail.com</span>
         <br><br><br>
         <div class="smedias">
-            <a href="" class="blaa"><i class="fa-brands fa-facebook"></i></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="" class="blaa"><i class="fa-brands fa-square-instagram"></i></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="" class="blaa"><i class="fa-brands fa-twitter"></i></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="" class="blaa"><i class="fa-brands fa-youtube"></i></a>
+            <a href="" class="blaa"><i class="fa-brands fa-facebook"></i></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="" class="blaa"><i class="fa-brands fa-square-instagram"></i></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="" class="blaa"><i class="fa-brands fa-x-twitter"></i></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="" class="blaa"><i class="fa-brands fa-youtube"></i></a>
         </div>
         <!-- <span class="dot1"><a href=""></a></span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="dot1"><a href="">2</a></span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="dot1"><a href="">3</a></span>&nbsp;&nbsp;&nbsp;&nbsp;<b>...</b>&nbsp;&nbsp;&nbsp;&nbsp;<span class="dot1" style="padding: 5px;"><a href="">21</a></span> -->
     </div>
@@ -241,7 +241,7 @@
             <p><a href="index.html">HOME</a></p><br>
             <p><a href="about.html">ABOUT</a></p><br>
             <p><a href="product.html">SERVICES</a></p><br>
-            <p>BLOG</p><br>
+            <p><a>BLOG</a></p><br>
             <p><a href="contactform.html">CONTACT</a></p>
             </div>
         
@@ -250,11 +250,11 @@
             <div class="acc1">
                 <h2 style="font-size: 25px;">ACCOUNT</h2>
             <br><br>
-            <p>ACCOUNT</p><br>
-            <p>CHECKOUT</p><br>
+            <p><a>ACCOUNT</a></p><br>
+            <p><a>CHECKOUT</a></p><br>
             <p><a href="login.html">LOGIN</a></p><br>
-            <p>REGISTER</p><br>
-            <p>SHOPPING</p>
+            <p><a>REGISTER</a></p><br>
+            <p><a>SHOPPING</a></p>
             </div>
         </div> 
     </div>
