fixing the search bar

--- a/about.html
+++ b/about.html
@@ -16,10 +16,9 @@
             <li><a href="" class="ac"><i class="fa-solid fa-address-card"></i>&nbsp;About</a></li>
             <li><a href="contactform.html" target="_blank"><i class="fa-solid fa-phone"></i>&nbsp;Contact</a></li>
         <!--     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -->
-            <li><input type="text" placeholder=" search products " class="inp">&nbsp;<i style="box-shadow: 7px 7px 7px grey;font-size: 20px; 
+        <li class="search_bar"><input type="text" placeholder=" search products " class="inp"><i style="font-size: 20px; 
             position: relative;right: 28px;top: 4px;
             " class="fa-solid fa-magnifying-glass"></i></li>
-            </STRONG>
            <!--  <span style="background-color: aliceblue; border: 1px solid black; border-radius: 4px;"
                 class="srh"><b>Search</b></span> -->
 
