--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <li><a href="about.html"><i class="fa-solid fa-address-card"></i>&nbsp;About</a></li>
             <li><a href="contactform.html" target="_blank"><i class="fa-solid fa-phone"></i>&nbsp;Contact</a></li>
         <!--     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -->
-            <li><input type="text" placeholder=" search products " class="inp">&nbsp;<i style="box-shadow: 7px 7px 7px grey;font-size: 20px; 
+            <li><input type="text" placeholder=" search products " class="inp"><i style="font-size: 20px; 
             position: relative;right: 28px;top: 4px;
             " class="fa-solid fa-magnifying-glass"></i></li>
             </STRONG>
