Fix typos in contactform.html

--- a/contactform.html
+++ b/contactform.html
@@ -40,14 +40,14 @@
         <input type="text" name="" id="a" placeholder="Enter your full name ">
         <br>
         <br>
-        <input type="text" placeholder="Enter Your Email Adress" id="b">
+        <input type="text" placeholder="Enter Your Email Address" id="b">
         <br>
         <br>
         <input type="text" placeholder="Enter Your Subject" id="c">
         <br>
         <br>
         <!-- <input type="text" id="d" placeholder="Enter Message"> -->
-        <textarea name="" id="" cols="70" rows="13" placeholder="Enter Your Mesage" style="box-shadow: 2px 3px ; border-radius: 5px; border: 2px solid black;"></textarea>
+        <textarea name="" id="" cols="70" rows="13" placeholder="Enter Your Message" style="box-shadow: 2px 3px ; border-radius: 5px; border: 2px solid black;"></textarea>
     </table>
 </div>
 </center>
