fixed contact form submit issue

--- a/contactform.html
+++ b/contactform.html
@@ -35,26 +35,28 @@
     <br>
     <br>
     <center>
-        <div class="hhh">
+    <div class="hhh">
     <table>
-        <input type="text" name="" id="a" placeholder="Enter your full name ">
-        <br>
-        <br>
-        <input type="text" placeholder="Enter Your Email Address" id="b">
-        <br>
-        <br>
-        <input type="text" placeholder="Enter Your Subject" id="c">
-        <br>
-        <br>
-        <!-- <input type="text" id="d" placeholder="Enter Message"> -->
-        <textarea name="" id="" cols="70" rows="13" placeholder="Enter Your Message" style="box-shadow: 2px 3px ; border-radius: 5px; border: 2px solid black;"></textarea>
+        <form class="contactusform">
+            <input type="text" name="" id="a" placeholder="Enter your full name " required>
+            <br>
+            <br>
+            <input type="text" placeholder="Enter Your Email Address" id="b" required>
+            <br>
+            <br>
+            <input type="text" placeholder="Enter Your Subject" id="c" required>
+            <br>
+            <br>
+            <!-- <input type="text" id="d" placeholder="Enter Message"> -->
+            <textarea name="" id="" cols="70" rows="13" placeholder="Enter Your Message" style="box-shadow: 2px 3px ; border-radius: 5px; border: 2px solid black;" required></textarea>
+            <br>
+            <br>
+            <input type="submit" class="submit" style="color: white;">
+        </form>
     </table>
 </div>
 </center>
 <br>
-<div class="submit">
-    <a style="color: white;" href=""><B>Submit</B></a>
-</div>
 <br>
 <br>
 <br>
