--- a/about.html
+++ b/about.html
@@ -8,19 +8,18 @@
 <body>
  <div class="nav">
         <ul>
-            <li><strong><a href="#"><img style="margin-left:12px ; margin-top: 12px;" src="img/logo.png" width="120px"></strong></a></li>
+            <li><strong><a href="index.html"><img style="margin-left:12px ; margin-top: 12px;" src="img/logo.png" width="120px"></strong></a></li>
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             <STRONG>
                 <li><a href="index.html" ><i class="fa-solid fa-house"></i>&nbsp;Home</a></li>
             <li><a href="product.html" target="_blank"><i class="fa-brands fa-product-hunt"></i>&nbsp;Products</a></li>
             <li><a href="" class="ac"><i class="fa-solid fa-address-card"></i>&nbsp;About</a></li>
             <li><a href="contactform.html" target="_blank"><i class="fa-solid fa-phone"></i>&nbsp;Contact</a></li>
-        <!--     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -->
+
         <li class="search_bar"><input type="text" placeholder=" search products " class="inp"><i style="font-size: 20px; 
             position: relative;right: 28px;top: 4px;
             " class="fa-solid fa-magnifying-glass"></i></li>
-           <!--  <span style="background-color: aliceblue; border: 1px solid black; border-radius: 4px;"
-                class="srh"><b>Search</b></span> -->
+ 
 
         </ul>
     </div>
@@ -62,7 +61,7 @@
         <div class="smedias">
             <a href="" class="blaa"><i class="fa-brands fa-facebook"></i></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="" class="blaa"><i class="fa-brands fa-square-instagram"></i></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="" class="blaa"><i class="fa-brands fa-x-twitter"></i></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="" class="blaa"><i class="fa-brands fa-youtube"></i></a>
         </div>
-        <!-- <span class="dot1"><a href=""></a></span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="dot1"><a href="">2</a></span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="dot1"><a href="">3</a></span>&nbsp;&nbsp;&nbsp;&nbsp;<b>...</b>&nbsp;&nbsp;&nbsp;&nbsp;<span class="dot1" style="padding: 5px;"><a href="">21</a></span> -->
+
     </div>
     <div class="footer-secondary">
         <div class="menu">
