--- a/contactform.html
+++ b/contactform.html
@@ -11,17 +11,14 @@
 <body>
     <div class="nav">
         <ul>
-            <li><strong><a href="#"><img style="margin-left:12px ;" src="img/logo.png" width="120px"></strong></a></li>
+            <li><strong><a href="index.html"><img style="margin-left:12px ;" src="img/logo.png" width="120px"></strong></a></li>
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             <li><a href="index.html" target="_blank"  class="jk"> <i class="fa-solid fa-house"></i>&nbsp;Home</a></li>
             <li><a href="product.html" target="_blank" class="jk" > <i class="fa-brands fa-product-hunt"></i>&nbsp;Products</a></li>
             <li><a href="about.html" class="jk"> <i class="fa-solid fa-address-card"></i>&nbsp;About</a></li>
             <li><a href="contactform.html" target="_blank" class="ac" class="jk"> <i class="fa-solid fa-phone"></i>&nbsp;Contact</a></li>
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            <!-- <li><input type="text" placeholder=" search products " class="inp">&nbsp;<i style="box-shadow: 7px 7px 7px grey;font-size: 20px; 
-            position: relative;right: 28px;top: 4px;
-            " class="fa-solid fa-magnifying-glass"></i></li>  -->           <!-- <span style="background-color: aliceblue; border: 1px solid black; border-radius: 4px;"
-                class="srh"><b>Search</b></span> -->
+        
 
         </ul>
     </div>
@@ -47,7 +44,6 @@
             <input type="text" placeholder="Enter Your Subject" id="c" required>
             <br>
             <br>
-            <!-- <input type="text" id="d" placeholder="Enter Message"> -->
             <textarea name="" id="" cols="70" rows="13" placeholder="Enter Your Message" style="box-shadow: 2px 3px ; border-radius: 5px; border: 2px solid black;" required></textarea>
             <br>
             <br>
@@ -71,7 +67,6 @@
         <div class="smedias">
             <a href="" class="blaa"><i class="fa-brands fa-facebook"></i></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="" class="blaa"><i class="fa-brands fa-square-instagram"></i></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="" class="blaa"><i class="fa-brands fa-x-twitter"></i></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="" class="blaa"><i class="fa-brands fa-youtube"></i></a>
         </div>
-        <!-- <span class="dot1"><a href=""></a></span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="dot1"><a href="">2</a></span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="dot1"><a href="">3</a></span>&nbsp;&nbsp;&nbsp;&nbsp;<b>...</b>&nbsp;&nbsp;&nbsp;&nbsp;<span class="dot1" style="padding: 5px;"><a href="">21</a></span> -->
     </div>
     <div class="footer-secondary">
         <div class="menu">
