--- a/login.html
+++ b/login.html
@@ -3,52 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Login Page</title>
-    <style>
-        body {
-            font-family: ui-rounded;
-            text-align: center;
-            background-color: #e74040;
-        }
-        .container {
-            width: 300px;
-            margin: 0 auto;
-            margin-top: 100px;
-            background-color: #fff;
-            padding: 50px;
-            border-radius: 5px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-        .logo {
-            margin-bottom: 20px;
-        }
-        .form-group {
-            margin-bottom: 20px;
-        }
-        .form-group label {
-            display: block;
-            font-weight: bold;
-        }
-        .form-group input[type="text"],
-        .form-group input[type="password"] {
-            width: 100%;
-            padding: 8px;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-        }
-        .form-group button {
-            background-color: #0074D9;
-            color: #fff;
-            border: none;
-            padding: 10px 20px;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-    </style>
+    <link rel="stylesheet" href="Css/login.css">
+   
 </head>
 <body>
+    
     <div class="container">
         <div class="logo">
-            <img src="file:///C:/Users/an2ya/Desktop/spotify/Redstore-1/img/logo.png" alt="Logo">
+            <img src="img\logo.png" alt="Logo">
         </div>
         <h2>Login</h2>
         <form action="process_login.php" method="POST">
