--- a/contactform.html
+++ b/contactform.html
@@ -38,7 +38,7 @@
             <input type="text" name="" id="a" placeholder="Enter your full name " required>
             <br>
             <br>
-            <input type="text" placeholder="Enter Your Email Address" id="b" required>
+            <input type="email" placeholder="Enter Your Email Address" id="b" required>
             <br>
             <br>
             <input type="text" placeholder="Enter Your Subject" id="c" required>
