added cart section

--- a/contactform.html
+++ b/contactform.html
@@ -17,6 +17,7 @@
             <li><a href="product.html" target="_blank" class="jk" > <i class="fa-brands fa-product-hunt"></i>&nbsp;Products</a></li>
             <li><a href="about.html" class="jk"> <i class="fa-solid fa-address-card"></i>&nbsp;About</a></li>
             <li><a href="contactform.html" target="_blank" class="ac" class="jk"> <i class="fa-solid fa-phone"></i>&nbsp;Contact</a></li>
+            <li><a href="cart.html" target="_blank"><i class="fas fa-shopping-cart"></i>&nbsp;Cart</a></li>
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             <!-- <li><input type="text" placeholder=" search products " class="inp">&nbsp;<i style="box-shadow: 7px 7px 7px grey;font-size: 20px; 
             position: relative;right: 28px;top: 4px;
