--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             <li><a href="product.html" target="_blank"><i class="fa-brands fa-product-hunt"></i>&nbsp;Products</a></li>
             <li><a href="about.html"><i class="fa-solid fa-address-card"></i>&nbsp;About</a></li>
             <li><a href="contactform.html" target="_blank"><i class="fa-solid fa-phone"></i>&nbsp;Contact</a></li>
+            <li><a href="cart.html" target="_blank"><i class="fas fa-shopping-cart"></i>&nbsp;Cart</a></li>
             <li>
             <input type="text" placeholder="Search products " class="inp"><i  class="fa-solid fa-magnifying-glass"></i>
             </li>
