--- a/about.html
+++ b/about.html
@@ -3,6 +3,7 @@
 <head>
     <title>About us</title>
     <link rel="stylesheet" type="text/css" href="Css/about.css">
+    <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
     <script src="https://kit.fontawesome.com/61673b2d06.js" crossorigin="anonymous"></script>
 </head>
 <body>
