--- a/contactform.html
+++ b/contactform.html
@@ -5,9 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact US</title>
+
+    <link rel="stylesheet" href="Css/contactform.css">
+    <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
+    <script src="https://kit.fontawesome.com/61673b2d06.js" crossorigin="anonymous"></script>
 </head>
-<link rel="stylesheet" href="Css/contactform.css">
-<script src="https://kit.fontawesome.com/61673b2d06.js" crossorigin="anonymous"></script>
+
 <body>
     <div class="nav">
         <ul>
