--- a/index.html
+++ b/index.html
@@ -7,9 +7,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>REDSTORE- Fashion clothes for Boys and Girls </title>
+
+    <link rel="stylesheet" href="Css/style.css">
+    <link rel="icon" type="image/png" href="img/favicon.png">
+
+
 </head>
-<link rel="stylesheet" href="Css/style.css">
-<link rel="icon" type="image/png" href="favicon.png">
+
 
 
 <script src="https://kit.fontawesome.com/3cd5401aa0.js" crossorigin="anonymous"></script>
