--- a/login.html
+++ b/login.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Login Page</title>
     <link rel="stylesheet" href="Css/login.css">
+    <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
    
 </head>
 <body>
