Add: font families added

--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
 
         <div class="ale">
             <b>
-                <div style="color: red; font-size: 55px;">Sale 20% off</h1>
+                <div style="color: red; font-size: 55px;" id="heading1">Sale 20% off</h1>
                 </div>
             </b>
             <b>
-                <div style="color: black; font-size: 60px;">ON Everything</div>
+                <div style="color: black; font-size: 60px;" id="heading">ON Everything</div>
             </b>
             <br>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat optio magni eaque explicabo a
@@ -136,7 +136,7 @@
     </div>
     <br>
     <br>
-    <p style="font-weight: bolder; margin: 20px 0px 0px 30px" id="tc">
+    <p class="heading2" style="font-weight: bolder; margin: 20px 0px 60px 30px" id="tc">
         <span style="font-size: 60px;">Trending</span> <span
             style="font-size:60px ; color: rgb(233, 16, 16); margin-left: 10px;">Categories</span>
     </p>
@@ -179,7 +179,7 @@
     </section>
 
 
-    <p style="font-weight: bolder; margin: 20px 0px 0px 30px" id="thtbm">
+    <p class="heading3" style="font-weight: bolder; margin: 20px 0px 0px 30px" id="thtbm">
         <span style="font-size: 60px;">Too Hot to be</span> <span
             style="font-size:60px ; color: rgb(233, 16, 16); margin-left: 10px;">Missed</span>
     </p>
@@ -189,7 +189,7 @@
         <a href=""><img src="./img/images/mid-size-hygiene-revamp-printed-bf-tees-01-1689572486.webp" alt="" /></a>
         <a href=""><img src="./img/images/mid-size-hygiene-revamp-joggersunleashed-1689572489.webp" alt="" /></a>
     </section>
-    <center>
+    <center class="heading3">
         <span style="font-size: 60px;"><b>Our</b></span>
         <span style="font-size:60px ; color: rgb(233, 16, 16); margin-left: 10px;"><b>Products</b></span>
     </center>
