Add new file: registration.html and add new link in file: index.html, login.html, product.html

--- a/product.html
+++ b/product.html
@@ -254,7 +254,7 @@
             <p><a>ACCOUNT</a></p><br>
             <p><a>CHECKOUT</a></p><br>
             <p><a href="login.html">LOGIN</a></p><br>
-            <p><a>REGISTER</a></p><br>
+            <p><a href="registration.html">REGISTER</a></p><br>
             <p><a>SHOPPING</a></p>
             </div>
         </div> 
