added account section

--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@
                 <div class="acc1">
                     <h2 style="font-size: 25px;">ACCOUNT</h2>
                     <br><br>
-                    <p><a>ACCOUNT</a></p><br>
+                    <p><a href="account.html">ACCOUNT</a></p><br>
                     <p><a>CHECKOUT</a></p><br>
                     <p><a href="login.html">LOGIN</a></p><br>
                     <p><a href="./registration.html">REGISTER</a></p><br>
