corrected the position of search icon

--- a/cart.html
+++ b/cart.html
@@ -17,9 +17,9 @@
             <li><a href="contactform.html" target="_blank"><i class="fa-solid fa-phone"></i>&nbsp;Contact</a></li>
             <li><a href="cart.html" class="ac"><i class="fas fa-shopping-cart"></i>&nbsp;Cart</a></li>
 
-        <li class="search_bar"><input type="text" placeholder=" search products " class="inp"><i style="font-size: 20px; 
-            position: relative;right: 28px;top: 4px;
-            " class="fa-solid fa-magnifying-glass"></i></li>
+            <li>
+                <input type="text" placeholder="Search products " class="inp"><i  class="fa-solid fa-magnifying-glass"></i>
+              </li>
  
 
         </ul>
