added checkout page which was present in the footer seciton

--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@
                     <h2 style="font-size: 25px;">ACCOUNT</h2>
                     <br><br>
                     <p><a href="account.html">ACCOUNT</a></p><br>
-                    <p><a>CHECKOUT</a></p><br>
+                    <p><a href="checkout.html">CHECKOUT</a></p><br>
                     <p><a href="login.html">LOGIN</a></p><br>
                     <p><a href="./registration.html">REGISTER</a></p><br>
                     <p><a>SHOPPING</a></p>
