Added first commit

--- a/checkout.html
+++ b/checkout.html
@@ -5,7 +5,7 @@
     <style>
         /* CSS for styling the checkout section with soothing colors */
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
             background-color: #e74040;
         }
 
