--- a/checkout.html
+++ b/checkout.html
@@ -6,7 +6,7 @@
         /* CSS for styling the checkout section with soothing colors */
         body {
             font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-            background-color: #e74040;
+            background-color: #ee3131;
         }
 
         .container {
